# why-turn-on-computer

./: .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  TODO.md  _main.html  _main_minimal.py  ask_for_goal.html  build.py  goal_edit.html  install.sh  main.html  main.py  ops  pyproject.toml  requirements.txt  version  why.py  why_done.py
assets/: main.html
doc/: DOCUMENTATION.md
doc/notes/: portfolio.json
experiments/: goal_gui.html
src/: __init__.py  config.py  session.py  storage.py  ui.py
