[project]
name = "why-turn-on-computer"
version = "2.0.0"
description = "Terminal-based session tracker - Why did you turn on your computer?"
authors = [
  { name = "Kolja Sam", email = "github@koljapluemer.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
  "prompt-toolkit>=3.0.47,<4.0.0",
  "appdirs==1.4.4",
  "pyinstaller>=6.15.0,<7.0.0"
]

[project.scripts]
why = "why:main"
why-done = "why_done:main"

[tool.uv]
package = false
